# tinyfish-web-agent-integrations

./: .gitignore  .tags.json  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: crew-ai-ci.yml  google-adk-ci.yml  google-adk-publish.yml  langchain-ci.yml  langchain-publish.yml  n8n-ci.yml  n8n-publish.yml
ag2/: README.md
ag2/autogen/tools/experimental/tinyfish/: __init__.py  tinyfish.py
ag2/test/tools/experimental/tinyfish/: test_tinyfish.py
crew-ai/: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt
crew-ai/src/tinyfish_web_agent/: __init__.py  tool.py
crew-ai/tests/: test_tool.py
dify/: .env.example  GUIDE.md  PRIVACY.md  README.md  manifest.yaml
dify/provider/: tinyfish_web_agent.py  tinyfish_web_agent.yaml
dify/readme/: README_ja_JP.md  README_pt_BR.md  README_zh_Hans.md
dify/tools/: base.py  constants.py  get_run.py  get_run.yaml  list_runs.py  list_runs.yaml  run_async.py  run_async.yaml  run_sse.py  run_sse.yaml  run_sync.py  run_sync.yaml
google-adk/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
google-adk/src/tinyfish_adk/: __init__.py  tools.py
google-adk/tests/: test_tools.py
langchain/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
langchain/demo-app/: .gitignore  index.html  package.json  vite.config.ts
langchain/demo-app/src/: App.tsx  index.css
langchain/demo-app/src/lib/: api.ts  types.ts
langchain/demo-backend/: .env.example  pyproject.toml
langchain/demo-backend/app/: agent.py  config.py  main.py  routes.py  stream.py
langchain/langchain_tinyfish/: __init__.py  _api_wrapper.py  tool.py
langchain/scripts/: check_imports.py
langchain/tests/integration_tests/: test_compile.py  test_integration.py  test_standard.py
langchain/tests/unit_tests/: test_api_wrapper.py  test_imports.py  test_packaging.py  test_standard.py  test_tool.py
n8n/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
n8n/credentials/: TinyfishApi.credentials.ts
n8n/nodes/Tinyfish/: GenericFunctions.ts  Tinyfish.node.json  Tinyfish.node.ts  TinyfishDescription.ts
