[project]
name = "tinyfish-adk"
version = "0.1.1"
description = "TinyFish Web Agent tools for Google Agent Development Kit (ADK)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TinyFish", email = "support@tinyfish.io" }]
keywords = ["google-adk", "tinyfish", "web-automation", "ai-agent", "browser-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-adk>=1.0.0",
    "tinyfish>=0.2.5",
]

[project.urls]
Homepage = "https://tinyfish.ai"
Documentation = "https://docs.tinyfish.ai"
Repository = "https://github.com/tinyfish-io/tinyfish-web-agent-integrations"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinyfish_adk"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "W"]
