[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-tinyfish"
version = "0.1.0"
description = "LangChain integration for TinyFish Web Agent - AI-powered web automation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [{ name = "TinyFish", email = "support@tinyfish.io" }]
keywords = ["langchain", "tinyfish", "web-automation", "ai-agent", "browser-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3.0,<2.0.0",
    "tinyfish>=0.2.5",
]

[project.urls]
Homepage = "https://tinyfish.ai"
Documentation = "https://docs.tinyfish.ai"
Repository = "https://github.com/tinyfish-io/tinyfish-web-agent-integrations"

[tool.hatch.build.targets.wheel]
packages = ["langchain_tinyfish"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T201", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
