[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-backend"
version = "0.1.0"
description = "FastAPI backend for LangChain TinyFish multi-tool agent demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=1.0.1",
    "duckduckgo-search>=6.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]
